<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.onap.so</groupId>
        <artifactId>so</artifactId>
        <version>1.9.0-SNAPSHOT</version>
    </parent>
    <groupId>org.onap.so.adapters.so-cnf-adapter</groupId>
    <artifactId>so-cnf-adapter</artifactId>
    <version>1.9.0-SNAPSHOT</version>
    <name>SO CNF Adapter</name>
    <packaging>pom</packaging>

    <properties>
        <java.version>11</java.version>
        <version.java.compiler>11</version.java.compiler>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <gson-version>2.8.9</gson-version>
        <swagger-core-v3-version>2.1.13</swagger-core-v3-version>
        <version-swagger-codegen-v3>3.0.33</version-swagger-codegen-v3>
        <so-core-version>1.9.0-SNAPSHOT</so-core-version>
        <equalsverifier-version>3.4.1</equalsverifier-version>
        <snakeyaml-version>0.11</snakeyaml-version>
        <kubernetes-client-version>16.0.0</kubernetes-client-version>
        <kotlin-stdlib-version>1.3.70</kotlin-stdlib-version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${version.java.compiler}</source>
                    <target>${version.java.compiler}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.9.0</version>
                <executions>
                    <execution>
                        <id>format-java</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>format-xml</id>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <phase>process-sources</phase>
                        <configuration>
                            <skip>true</skip>
                            <includes>
                                <include>pom.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>validate-java</id>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>validate-poms</id>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                        <configuration>
                            <skip>true</skip>
                            <includes>
                                <include>pom.xml</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>so-cnf-adapter-application</module>
        <module>so-cnfm</module>
        <module>packages</module>
    </modules>
</project>
